artifacts/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-grafana
  namespace: grafana
  annotations:
   kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
       name: loki-grafana
       port:
        number: 80
   rules:
    - host: grafana.mendix.com
      http:
        paths:
        - backend:
            service:
              name: loki-grafana
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - grafana.mendix.com
